--- a/d/di/dig/digitalart.org.html
+++ b/d/di/dig/digitalart.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the digitalart.org privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607004630id_/http%3A//digitalart.org/info.privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the digitalart.org privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207212057id_/http%3A//digitalart.org/info.privacy.php) for the most accurate reproduction.-->
 
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -52,63 +52,6 @@ function FCx(x){
 <script language="JavaScript1.2" src="http://digitalart.org/includes/menu/dqm_loader.js"></script>
 
 
-<script language="JavaScript"> 
-<!-- /* Copyright 1997-2003 BURST! Media, LLC. All Rights Reserved. (Version 1.0J) */ 
-function ShowBurstAd(adcode, width, height, sizes, intrusive, bgcolor, background) {
-var bN = navigator.appName;
-var bV = parseInt(navigator.appVersion);
-var base='http://www.burstnet.com/';
-var Tv=''; var Itr='';
-var sz=''; var bkgd='';
-var bgc=''; var rfr='';
-var vr='v=1.0J';
-var agt=navigator.userAgent.toLowerCase();
-
-if (sizes.length!=0) {sz='/sz='+sizes;} else {sz='';}
-if (bgcolor.length!=0) {bgc='/zg' + bgcolor;} else {bgc='';}
-if (background.length!=0) {bkgd='/bgi='+(escape(escape(background))).replace(/\//gi,'%252F');} else {bkgd='';}
-rfr='/r='+(escape(escape(top.location.href))).replace(/\//gi,'%252F');
-                            
-if (bV>=4) {
-  ts=window.location.pathname+window.location.search;
-  i=0; Tv=0; while (i< ts.length)
-    { Tv=Tv+ts.charCodeAt(i); i=i+1; } Tv="/"+Tv;
-} else {Tv=escape(window.location.pathname);
-  if( Tv.charAt(0)!='/' ) Tv="/"+Tv;
-    else if (Tv.charAt(1)=="/")
- Tv="";
-  if( Tv.charAt(Tv.length-1) == "/")
-   Tv = Tv + "_";
-}
-
-var fCode='<ifr'+'ame id="BURST" src="'+base+
- 'cgi-bin/ads/'+adcode+'.cgi/NI/if/'+vr+bgc+sz+bkgd+
- rfr+Tv+'/RETURN-CODE" width="'+width+'" height="'+
- height+'"'+'marginwidth="0" marginheight="0"'+
- 'hspace="0" vspace="0" frameborder="0" '+
- 'scrolling="no">';
- var gCode = '<'+'a href="'+base+'ads/'+adcode+'-map.cgi/'+
- vr+sz+rfr+Tv+'" target=_top><im'+'g src="'+base+
- 'cgi-bin/ads/'+adcode+'.cgi/'+vr+sz+rfr+Tv+
- '" border="0" alt="Click Here"></a>';
-var fCodeEnd = '</ifr'+'ame>';
-
-if ((adcode.charAt(0)=="a")&&(intrusive=="1")) {
- Itr='<di'+'v><scr'+'ipt src="'+base+'cgi-bin/ads/'+adcode+
- '.cgi/sz=0X0MN/'+vr+rfr+Tv+'/RETURN-CODE/JS/"></scr'+'ipt></d'+'iv>';
-}
-
-if (agt.indexOf("mac")==-1) {
-  document.write(fCode+gCode+fCodeEnd+Itr);
-} else {
-  document.write(gCode);
-}
-}
-//-->
-</script>
-<!-- END BURST CODE -->
-
-
 <!-- FASTCLICK.COM InVue CODE v1.1 for digitalart.org -->
 <script language="javascript"><!--
 var dc=document; if(dc.all && dc.getElementById){
@@ -130,7 +73,7 @@ dc.write('/w/get.media?sid=420&tm=12&m=4&c='+mjo+'"></scr'+'ipt>');}} // -->
 <noscript><a href="http://media.fastclick.net/w/click.here?sid=420&m=1&c=1" target="_blank">
 <img src="http://media.fastclick.net/w/get.media?sid=420&m=1&tp=5&d=s&c=1"
 width=728 height=90 border=1></a></noscript>
-<!-- FASTCLICK.COM 728x90 and 468x60 BANNER CODE for digitalart.org --></td>
+<!-- FASTCLICK.COM 728x90 and 468x60 BANNER CODE for digitalart.org --><img src="http://digitalart.org/phpAdsNew/adlog.php?bannerid=160&amp;clientid=69&amp;zoneid=16&amp;source=&amp;block=0&amp;capping=0&amp;cb=c29d03cfb77b81e311f8dfaebe961769" width="0" height="0" alt="" style="width: 0px; height: 0px;"></td>
           <td width="1"><img src="http://digitalart.org/images/clear.gif" width="1" height="98"></td>
         </tr>
         <tr>
@@ -141,7 +84,7 @@ width=728 height=90 border=1></a></noscript>
       <table border="0" cellpadding="0" cellspacing="0" width="760">
         <tbody><tr>
           <td height="34" width="5%"><img src="http://digitalart.org/images/header-logo.gif" width="159" height="34"></td>
-          <td align="center" valign="bottom" width="90%" style="padding-bottom:3px;font-family:Verdana;font-size:10px;color:#FFFFFF"><nobr><a href="http://oz.valueclick.com/r/hs0284505/a0125569/0"><font color="#FFFFFF">Click here for a <b><font color="yellow">FREE Art Test</font></b> from Art Instruction Schools</font></a></nobr><div><img src="/images/clear.gif" width="1" height="1"></div></td>
+          <td align="center" valign="bottom" width="90%" style="padding-bottom:3px;font-family:Verdana;font-size:10px;color:#FFFFFF"><nobr><a href="http://www.webbydo.com"><font color="#FFFFFF">Want to build your own site? <b><font color="yellow">Try WebbyDo!</font></b></font></a></nobr><div><img src="/images/clear.gif" width="1" height="1"></div></td>
           <td width="5%" valign="bottom" align="right"><img src="http://digitalart.org/images/header-login.gif" width="232" height="10"></td>
         </tr>
       </tbody></table>
@@ -171,7 +114,7 @@ width=728 height=90 border=1></a></noscript>
 
       <table border="0" cellpadding="0" cellspacing="0" width="760">
         <tbody><tr>
-          <td height="16" align="left" class="bright"><nobr><span class="smaller">&nbsp;&nbsp;<b>16,379</b> Artworks, <b>9,316</b> Members, <b>35</b> Users Online (<a href="http://digitalart.org/whos_online.php" class="light-link" target="_top">Who?</a>)</span></nobr></td>
+          <td height="16" align="left" class="bright"><nobr><span class="smaller">&nbsp;&nbsp;<b>17,785</b> Artworks, <b>10,514</b> Members, <b>73</b> Users Online (<a href="http://digitalart.org/whos_online.php" class="light-link" target="_top">Who?</a>)</span></nobr></td>
           <td height="16" align="right" class="bright"><nobr><span class="smaller"><a href="http://digitalart.org/random.php?artwork" class="light-link" target="_top">Random Artwork</a> &nbsp;<a href="http://digitalart.org/random.php?artist" class="light-link" target="_top">Random Artist</a> &nbsp;<a href="http://digitalart.org/recover.php" class="light-link" target="_top">Recover Login</a>&nbsp;&nbsp;</span></nobr></td>
         </tr>
       </tbody></table>
@@ -216,6 +159,7 @@ width=728 height=90 border=1></a></noscript>
 <br>
 
 <div class="t-medium">Information Volunteered</div>
+You must be at least 13-years-old to create a digitalart.org account and to submit personal information to digitalart.org.<br><br>
 <div>We collect the e-mail addresses of those who communicate with us via e-mail. We collect information volunteered by users such as the Account Information they provide as a member, the Personal Profile they create, and information involved in purchasing Premium Membership.</div>
 <br>
 
@@ -243,33 +187,33 @@ width=728 height=90 border=1></a></noscript>
 <br>
 
 <div class="t-medium">Data Access/Quality</div>
-<div>Upon request, we provide site users with access to all information that we maintain about them, transaction information (e.g., dates on which Premium Membership orders were placed and amounts spent), communications that the user has directed to our site (e.g., e-mails, inquiries), and contact information (e.g., e-mail address, name, etc.) that we maintain about them. Persons can access this information by e-mailing us at <a href="mailto:contact@digitalart.org">contact@digitalart.org</a> or by using our <a href="/info.contact.php">Contact Form</a>. Upon request, we offer everyone the ability to have inaccuracies in their information corrected.</div>
+<div>Upon request, we provide site users with access to all information that we maintain about them, transaction information (e.g., dates on which Premium Membership orders were placed and amounts spent), communications that the user has directed to our site (e.g., e-mails, inquiries), and contact information (e.g., e-mail address, name, etc.) that we maintain about them. Persons can access this information by e-mailing us at <script>
+		var a, s, n;
+		function UnCrypt(s) {r='';for(i=0;i<s.length;i++){n=s.charCodeAt(i); if (n>=8364) {n = 128;} r += String.fromCharCode( n - 3 ); }return r;}
+		a ="frqwdfwCgljlwdoduw1ruj";
+		email = UnCrypt(a);
+		document.write ('<a href=mailto:'+email+'>'+email+'</a>');
+		</script><a href="mailto:contact@digitalart.org">contact@digitalart.org</a> or by using our <a href="/info.contact.php">Contact Form</a>. Upon request, we offer everyone the ability to have inaccuracies in their information corrected.</div>
 
 <br>
 
-<div>If you have any questions about this privacy statement, the practices of this site, your dealings with this Web site, or if you feel that this site is not following its stated information policy, you may contact us by sending an e-mail to <a href="mailto:contact@digitalart.org">contact@digitalart.org</a> or using our <a href="/info.contact.php">Contact Form</a>.</div><div><img src="/images/clear.gif" width="1" height="8"></div>
+<div>If you have any questions about this privacy statement, the practices of this site, your dealings with this Web site, or if you feel that this site is not following its stated information policy, you may contact us by sending an e-mail to <script>
+		var a, s, n;
+		function UnCrypt(s) {r='';for(i=0;i<s.length;i++){n=s.charCodeAt(i); if (n>=8364) {n = 128;} r += String.fromCharCode( n - 3 ); }return r;}
+		a ="frqwdfwCgljlwdoduw1ruj";
+		email = UnCrypt(a);
+		document.write ('<a href=mailto:'+email+'>'+email+'</a>');
+		</script><a href="mailto:contact@digitalart.org">contact@digitalart.org</a> or using our <a href="/info.contact.php">Contact Form</a>.</div><div><img src="/images/clear.gif" width="1" height="8"></div>
     </td>
     <td width="8"><img src="/images/clear.gif" width="8" height="1"></td>
     <td width="1" class="v-line"><img src="/images/clear.gif" width="1" height="1"></td>
     <td width="136" align="center" valign="top"><table border="0" cellpadding="0" cellspacing="0" width="120">
   <tbody><tr>
-    <td align="left"><div id="menupathlite"><div id="menupath">
-<script type="text/javascript"><!--
-google_ad_client = "pub-0645258388492098";
-google_alternate_ad_url = "http://digitalart.org/includes/ad_defaults/fastclick_120x600.html";
-google_ad_width = 120;
-google_ad_height = 600;
-google_ad_format = "120x600_as";
-google_ad_channel ="1740020199";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "3300FF";
-google_color_url = "666666";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</div></div></td>
+    <td align="left"><div id="menupath">
+<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" width="120" height="600">
+ <param name="movie" value="/ads/strata/120x600_street_da.swf"> <param name="quality" value="high"> <param name="bgcolor" value="#FFFFFF"> <embed src="/ads/strata/120x600_street_da.swf" quality="high" bgcolor="#FFFFFF" width="120" height="600" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer">
+</object>
+</div><img src="http://digitalart.org/phpAdsNew/adlog.php?bannerid=157&amp;clientid=65&amp;zoneid=15&amp;source=&amp;block=0&amp;capping=0&amp;cb=ce330fa65d0c07b86beb25c084506551" width="0" height="0" alt="" style="width: 0px; height: 0px;"></td>
   </tr>
 </tbody></table>
 </td>
@@ -298,7 +242,7 @@ google_color_text = "000000";
               <span class="smaller">
                 <img src="http://digitalart.org/logger.php?ref=" width="1" height="1">
                 &nbsp;Copyright © 2000 - 2004 <a href="http://www.dreamdolphin.com" class="light-link">Dream Dolphin Enterprise</a>. All Rights Reserved.<br>
-                &nbsp;<a href="http://digitalart.org/info.privacy.php" class="light-link">Privacy Statement</a>.&nbsp; <a href="http://digitalart.org/info.terms.php" class="light-link">Terms of Use</a>.&nbsp; <a href="http://digitalart.org/info.advertising.php" class="light-link">Advertising</a>. &nbsp;<a href="http://digitalart.org/info.contact.php" class="light-link">Contact Us</a>. &nbsp;Processing done in 0.0151 seconds.
+                &nbsp;<a href="http://digitalart.org/info.privacy.php" class="light-link">Privacy Statement</a>.&nbsp; <a href="http://digitalart.org/info.terms.php" class="light-link">Terms of Use</a>.&nbsp; <a href="http://digitalart.org/info.advertising.php" class="light-link">Advertising</a>. &nbsp;<a href="http://digitalart.org/info.contact.php" class="light-link">Contact Us</a>. &nbsp;Processing done in 0.0256 seconds.
               </span>
             </div>
           </td>
