--- a/s/se/sea/searchbliss.com.html
+++ b/s/se/sea/searchbliss.com.html
@@ -1,145 +1,64 @@
-<!--The following is the downloaded HTML source of the searchbliss.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603030453id_/http%3A//www.searchbliss.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the searchbliss.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207213927id_/http%3A//www.searchbliss.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>SearchBliss Privacy Policies</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
-<body bgcolor="#FFFFFF" link="#006699" vlink="#006699">
-<table border="0" width="100%" height="637">
-  <tbody><tr> 
-    
-		
-<td width="9%" valign="TOP" height="820"> <font size="+2" face="Arial">SearchBliss Privacy Policy</font> 
+<body bgcolor="#FFFFFF" link="#006699" vlink="#006699" leftmargin="0" rightmargin="0" topmargin="0" bottommargin="0">
+<table width="800" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr bgcolor="#FFFFFF"> 
+<td width="45%" height="12" bgcolor="#006699"><a href="http://www.searchbliss.com"><img src="search_title.gif" width="355" height="70" align="top" border="0" hspace="0" vspace="0" alt="SearchBliss - Free web tools, free website content and free webmaster resources"></a></td>
+<td width="55%" bgcolor="#006699" valign="middle" align="center"> <i><font face="Verdana" size="3" color="#FFFFFF"><b>The Developer's Resource.</b></font></i></td>
+</tr>
+</tbody></table>
+<table width="800" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr bgcolor="#006699"> 
+<td width="120" height="35"><a href="/webmaster_resources.htm"><img src="webmaster-resources.gif" width="120" height="35" border="0" align="absmiddle" alt="Free webmaster resources"></a></td>
+<td width="120" height="35"><a href="/Webmaster-Tools.htm"><img src="webmaster-tools.gif" width="120" height="35" border="0" alt="Free webmaster tools"></a></td>
+<td width="120" height="35" bgcolor="#006699"><a href="/Free-Website-Content.htm"><img src="free-website-content.gif" width="120" height="35" border="0" alt="Free website content"></a></td>
+<td width="120" height="35" bgcolor="#006699"><a href="/generators.asp"><img src="buy-code-generators.gif" width="120" height="35" border="0" align="absmiddle" alt="Buy code generators for your website"></a></td>
+<td width="120" height="35" bgcolor="#006699"><a href="/affiliates.asp"><img src="affiliate-program.gif" width="120" height="35" border="0" align="absmiddle" alt="Affiliate Login"></a></td>
+<form name="searchform" method="get" action="http://www.searchbliss.com/search/search.asp"></form>
+<td colspan="4" width="200" valign="middle" align="center" height="35" background="bg-search.gif"> 
+<input size="10" name="search" type="text" style="color:#994411;font-family:Arial;font-weight:bold;font-size:11px;background-color:#FFFFFF;" onfocus="this.form.search.value=''">
+<input type="submit" value="SEARCH" style="color:white;font-family:Verdana;font-weight:bold;font-size:10px;background-color:#006699;border-color:#006699;border-width:2px;cursor:hand">
+<script language="JAVASCRIPT">
+var r_t = new Array ();r_t[0] = "JavaScript";r_t[1] = "ASP";r_t[2] = "CGI";r_t[3] = "Development";r_t[4] = "Hosting";r_t[5] = "HTML";r_t[6] = "DHTML";r_t[7] = "Templates";r_t[8] = "Marketing";r_t[9] = "Free Stuff";var i = Math.round(9*Math.random());document.searchform.search.value=(r_t[i]);
+</script>
+</td>
+
+</tr>
+</tbody></table>
+<blockquote>
+<p><font size="+2" face="Arial">SearchBliss Privacy Policy</font> </p>
 <p><font face="Arial"><span style="font-size:12.0pt;mso-bidi-font-size:10.0pt;
 font-family:Arial">This privacy statement was last updated on 02/01/04. SearchBliss has created this privacy statement in order to disclose our information gathering practices for this Web site, <a href="http://www.searchbliss.com/">www.searchbliss.com</a>.<span style="mso-spacerun:
-yes"> </span></span> </font> 
-</p><p><font face="Arial">We 
-    respect 
-    and 
-    are 
-    committed 
-    to 
-    protecting 
-    your 
-    privacy. 
-    That 
-    is 
-    why 
-    we 
-    have 
-    created 
-    this 
-    Privacy 
-    Policy. 
-    This 
-    Privacy 
-    Policy 
-    lets 
-    you 
-    know 
-    how 
-    your 
-    personal 
-    information 
-    is 
-    processed 
-    and 
-    used. 
-    We 
-    promise 
-    that 
-    we 
-    will 
-    take 
-    steps 
-    to 
-    use 
-    your 
-    personal 
-    information 
-    only 
-    in 
-    ways 
-    that 
-    are 
-    compatible 
-    with 
-    this 
-    Privacy 
-    Policy. 
-    These 
-    policies 
-    are 
-    only 
-    in 
-    effect 
-    for 
-    the 
-    Web 
-    pages, 
-    and 
-    opt-in 
-    email 
-    lists 
-    owned 
-    and 
-    operated 
-    by 
-    SearchBliss. 
-    </font>
-   </p><p><font face="Arial"><b>Information 
-    Collected 
-    by 
-    SearchBliss</b> 
-    </font>
-   
-</p><p><font face="Arial">SearchBliss may collect information submitted to us through forms and emails associated with joining, downloading and copying our scripts, comments, advertising with us, and linking to us. SearchBliss.com DOES NOT recieve credit card information when purchasing goods and services to or from SearchBliss through third parties (PayPal). All information collected by SearchBliss is kept private. We DO NOT sell, give away, or pass on information to 3rd parties unless otherwise required by a court of law in compliance with the law. </font> 
-</p><p> 
-    <font face="Arial"><b>Use 
-    of 
-    "cookies</b>" 
-    </font>
-   
-			
-</p><p><font face="Arial"> A cookie is a small piece of data that is sent to your browser and stored on your computer's hard drive. A cookie can NOT read data off your hard disk or read other cookie files created by other web sites. Cookies are harmless to your computer. SearchBliss uses only TWO "cookies" at this time. One cookie is used in relation to our <a href="http://www.searchbliss.com/affiliates.asp" target="_blank">affiliate program</a> in order to keep track of affiliate sales and stats only. The second cookie is used to prevent the "Please rate SearchBliss" pop-up from being displayed more than one time per visitor, per year. We use NO other "cookies" because we feel it is not proper practice to load information into your computer that you may not be aware 
-of. </font> 
-</p><p> 
-    <font face="Arial"><b>Opt-in 
-    email 
-    list</b> 
-    </font>
-   
-</p><p><font face="Arial"> SearchBliss utilizes Microsoft's bCentral Network for it's opt-in emailing list. News letters are virus free for your protection and subscribers can remove themselves at any time from an email sent by SearchBliss. We strongly appose spamming and are in complete compliance with the terms and conditions of the bCentral Network. </font> 
-</p><p> 
-    <font face="Arial"><b>Links 
-    to 
-    other 
-    web 
-    sites</b> 
-    </font>
-   
-			
-</p><p><font face="Arial"> SearchBliss contains many hyperlinks and advertisements linked to other Web sites. SearchBliss is NOT responsible for the privacy practices or the content of such web sites or advertisers. We encourage you to check with those sites to determine their privacy policy. Please read 
-our <a href="http://www.searchbliss.com/advertising_agreement.htm" target="_blank">linking agreement</a> agreement for additional information. </font> 
-</p><p> 
-    
-</p><hr>
-<div align="center"><a href="http://www.searchbliss.com/"><font face="arial, sans-serif" size="2">Home</font></a><font face="sans-serif" size="2"> | <a href="http://www.searchbliss.com/webmaster_resources.htm">Free Webmaster Resources</a> | <a href="http://www.searchbliss.com/Webmaster-Tools.htm">Free Web Tools</a> 
-| <a href="http://www.searchbliss.com/Free-Website-Content.htm">Free Website Content </a> <br>
+yes"> </span></span> </font> </p>
+<p><font face="Arial">We respect and are committed to protecting your privacy. That is why we have created this Privacy Policy. This Privacy Policy lets you know how your personal information is processed and used. We promise that we will take steps to use your personal information only in ways that are 
+compatible with this Privacy Policy. These policies are only in effect for the Web pages, and opt-in email lists owned and operated by SearchBliss. </font> </p>
+<p><font face="Arial"><b>Information Collected by SearchBliss</b> </font> </p>
+<p><font face="Arial">SearchBliss may collect information submitted to us through forms and emails associated with joining, downloading and copying our scripts, comments, advertising with us, and linking to us. SearchBliss.com DOES NOT recieve credit card information when purchasing goods and services 
+to or from SearchBliss through third parties (PayPal). All information collected by SearchBliss is kept private. We DO NOT sell, give away, or pass on information to 3rd parties unless otherwise required by a court of law in compliance with the law. </font> </p>
+<p> <font face="Arial"><b>Use of "cookies</b>" </font> </p>
+<p><font face="Arial"> A cookie is a small piece of data that is sent to your browser and stored on your computer's hard drive. A cookie can NOT read data off your hard disk or read other cookie files created by other web sites. Cookies are harmless to your computer. SearchBliss uses only TWO "cookies" 
+at this time. One cookie is used in relation to our <a href="http://www.searchbliss.com/affiliates.asp" target="_blank">affiliate program</a> in order to keep track of affiliate sales and stats only. The second cookie is used to prevent the "Please rate SearchBliss" pop-up from being displayed 
+more than one time per visitor, per year. We use NO other "cookies" because we feel it is not proper practice to load information into your computer that you may not be aware of. </font> </p>
+<p> <font face="Arial"><b>Opt-in email list</b> </font> </p>
+<p><font face="Arial"> SearchBliss utilizes Microsoft's bCentral Network for it's opt-in emailing list. News letters are virus free for your protection and subscribers can remove themselves at any time from an email sent by SearchBliss. We strongly appose spamming and are in complete compliance with the 
+terms and conditions of the bCentral Network. </font> </p>
+<p> <font face="Arial"><b>Links to other web sites</b> </font> </p>
+<p><font face="Arial"> SearchBliss contains many hyperlinks and advertisements linked to other Web sites. SearchBliss is NOT responsible for the privacy practices or the content of such web sites or advertisers. We encourage you to check with those sites to determine their privacy policy. Please read 
+our <a href="http://www.searchbliss.com/advertising_agreement.htm" target="_blank">linking agreement</a> agreement for additional information. </font> </p>
+<p>&nbsp; </p>
+<hr>
+<div align="center"><a href="http://www.searchbliss.com/"><font face="arial, sans-serif" size="2">Home</font></a><font face="sans-serif" size="2"> | <a href="http://www.searchbliss.com/webmaster_resources.htm">Free Webmaster Resources</a> | <a href="http://www.searchbliss.com/Webmaster-Tools.htm">Free 
+Web Tools</a> | <a href="http://www.searchbliss.com/Free-Website-Content.htm">Free Website Content </a> <br>
 <a href="http://www.searchbliss.com/privacy.htm">Privacy Policy</a> | <a href="http://www.searchbliss.com/disclaimer.htm">Disclaimer</a> | <a href="http://www.searchbliss.com/comments.htm">Contact</a> | <a href="http://www.searchbliss.com/copyright.htm">Copyright Policies</a> | <a href="http://www.searchbliss.com/Webmaster-Resources-Site-Map.htm">Site 
 Map</a> <br>
-<a href="/asp.htm" style="color:#883300" title="FREE ASP">ASP</a> | <a href="/C.htm" style="color:#883300" title="FREE C/C++">C/C++</a> | <a href="/cfml.htm" style="color:#883300" title="FREE CFML">CFML</a> | <a href="/cgi.htm" style="color:#883300" title="FREE CGI">CGI</a> | <a href="/dhtml.htm" style="color:#883300" title="FREE DHTML">DHTML</a> 
-| <a href="/flash.htm" style="color:#883300" title="FREE Flash">Flash</a> | <a href="/html.htm" style="color:#883300" title="FREE HTML">HTML</a> | <a href="/java.htm" style="color:#883300" title="FREE Java">Java</a> | <a href="/javascript.htm" style="color:#883300" title="FREE Javascript">JavaScript</a> 
-| <a href="/php.htm" style="color:#883300" title="FREE PHP">PHP</a> | <a href="/perl.htm" style="color:#883300" title="FREE Perl">Perl</a> | <a href="/python.htm" style="color:#883300" title="FREE Python">Python</a> | <a href="/visual-basic.htm" style="color:#883300" title="FREE Visual Basic">Visual Basic</a> 
-| <a href="/xml.htm" style="color:#883300" title="FREE XML">XML</a><br>
-<a href="/banner-exchanges.htm" style="color:#883300" title="Banner Exchanges">Banner Exchanges</a> | <a href="/databases.htm" style="color:#883300" title="Databases">Databases</a> | <a href="/development.htm" style="color:#883300" title="Development">Development</a> | <a href="/domains.htm" style="color:#883300" title="Domains">Domains</a> 
-| <a href="/e-commerce.htm" style="color:#883300" title="E-commerce">E-commerce</a> | <a href="/free-stuff.htm" style="color:#883300" title="FREE stuff">Free Stuff</a> | <a href="/forums.htm" style="color:#883300" title="Forums">Forums</a><br>
-<a href="/graphics.htm" style="color:#883300" title="Graphics">Graphics</a> | <a href="/hosting.htm" style="color:#883300" title="Hosting">Hosting</a> | <a href="/portals.htm" style="color:#883300" title="Portals">Portals</a> | <a href="/promotion.htm" style="color:#883300" title="Promotion">Promotion</a> 
-| <a href="/templates.htm" style="color:#883300" title="Web templates">Templates</a> | <a href="/tools-utilities.htm" style="color:#883300" title="FREE Tools and Utilities">Tools / Utilities</a> | <a href="/traffic.htm" style="color:#883300" title="Website Traffic">Traffic</a> | <a href="/tutorials.htm" style="color:#883300" title="Tutorials">Tutorials</a> 
 </font><br>
-</div>
+<div align="center"> </div>
 <p align="center"><font face="Arial,Helvetica,sans-serif" size="2"> 
 <script language="JavaScript">
 <!--
@@ -155,12 +74,11 @@ Copyright © 2001-
 document.write(y0);
 //--->
 </script>2020
-SearchBliss, All Rights Reserved<br>
-</font></p>
-   
-      </td>
-  </tr>
-</tbody></table>
+SearchBliss, All Rights Reserved</font><font face="Arial,Helvetica,sans-serif" size="2"><br>
+</font> </p>
+</div>
+</blockquote>
+
 
 
 </body></html>
