--- a/s/so/soo/sootle.com.html
+++ b/s/so/soo/sootle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sootle.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603075613id_/http%3A//www.sootle.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sootle.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207235034id_/http%3A//www.sootle.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -7,20 +7,29 @@
 <link rel="stylesheet" href="http://www.sootle.com/style.css" type="text/css">
 <meta name="description" content="">
 <meta name="keywords" content="">
+<script type="text/javascript">
+<!--
+        document.write('<img src="/cgi-bin/ax.pl?trans.gif&ref=');
+        document.write(document.referrer);
+        document.write('" height="1" width="1" alt="" />');
+// -->
+</script></head><body><img src="/cgi-bin/ax.pl?trans.gif&amp;ref=" height="1" width="1" alt=""><noscript>
+      <p>  <img src="/cgi-bin/ax.pl?trans.gif" height="1" width="1" alt="" />
+</p>
+</noscript>
+
 <script>
 <!--
 function sf(){document.f.sq.focus();}
 // -->
 </script>
-</head>
 
-<body>
-<img src="/cgi-bin/ax.pl?trans.gif&amp;ref=" height="1" width="1" alt=""><noscript>
-        <img src="/cgi-bin/ax.pl?trans.gif" height="1" width="1" alt="" />
-</noscript><table border="0" class="main">
+
+
+<table border="0" class="main">
 <!--<table border="0" class="logo">-->
   <tbody><tr>
-    <td class="logo" width="100%" height="79" colspan="5">
+    <td class="logo" width="100%" height="79" colspan="6">
     <center>
     <a href="http://www.sootle.com/index.html">
     <img border="0" src="http://www.sootle.com/images/logo_sootle.gif" width="270" height="105" alt="Free Search Engine">
@@ -29,30 +38,16 @@ function sf(){document.f.sq.focus();}
     </td>
   </tr>
   <tr>
-  <td class="main_title" colspan="5">
+  <td class="main_title" colspan="6">
   <center><h1>Sootle :: Privacy</h1></center>
   </td>
   </tr>
 
 <tr>
 
-<td class="menu_item"><a href="http://www.sootle.com/index.html">Search</a></td><td class="menu_item"><a href="http://www.sootle.com/directory/">Directory</a></td><td class="menu_item"><a href="/MailingList">Newsletter</a></td><td class="menu_item"><a href="http://bot.sootle.net/">Sootlebot</a></td><td class="menu_item"><a href="http://www.sootle.com/about.html">About</a></td></tr>
-
-
-<script type="text/javascript">
-<!--
-        document.write('<img src="/cgi-bin/ax.pl?trans.gif&ref=');
-        document.write(document.referrer);
-        document.write('" height="1" width="1" alt="" />');
-// -->
-</script>
-
-  <tr>
-<td colspan="5" class="body">
-
-
-
-
+<td class="menu_item"><a href="http://www.sootle.com/index.html">Search</a></td><td class="menu_item"><a href="http://www.sootle.com/directory/">Directory</a></td><td class="menu_item"><a href="/MailingList">Newsletter</a></td><td class="menu_item"><a href="http://directory.sootle.com/">Sootlebot</a></td><td class="menu_item"><a href="http://directory.sootle.com/">Webmaster Directory</a></td><td class="menu_item"><a href="http://www.sootle.com/about.html">About</a></td>
+  </tr><tr>
+<td colspan="6" class="body">
     Sootle respects the privacy policy for the users ("<b>Individuals</b>") that 
     use Sootle ("<b>Sootle Search Services</b>"). When you search in Sootle, any 
     of your information that you collect will <b>not </b>be given away to any 
@@ -96,17 +91,20 @@ Sootle, Inc. All rights reserved.</font></b></b></font></p><font size="3"><b>
 </b></font></font></td>
   </tr>
   <tr>
-<td class="navigation_footer" colspan="5">
-<a href="http://www.sootle.com/latest/">Voyeur Search</a> | <a href="http://www.sootle.com/latest/top/">Top Searches</a> | <a href="/submit/">Submit your Site</a> | <a href="http://www.sootle.com/privacy.html">Privacy</a></td>
+<td class="navigation_footer" colspan="6">
+<a href="http://www.sootle.com/latest/top/">Top Searches</a> | <a href="http://www.sootle.com/latest/">Voyeur Web</a> | <a href="/submit/">Submit your Site</a> | <a href="http://www.sootle.com/privacy.html">Privacy</a></td>
 </tr><tr>
-<td class="link_footer" colspan="5">
-<a href="http://www.performancecorporate.com/">Corporate</a> | 
+<td class="my_footer" colspan="6">
+<a href="http://www.performancecorporate.com/">Website Promotion</a> | 
+<a href="http://www.link-pimp.com/">Link-Pimp Link Directory</a> |
 <a href="http://www.web-mastery.net/">Webmaster Forums</a> | 
-<a href="http://www.soma-slim.com/">Weight Loss Pills</a> | 
-<a href="http://www.uberdrive.net/">Professional Web Marketing</a> | 
-<a href="http://www.nccw.net/">Cheap Isp - Best ISPs - Internet Service Provider</a> | 
-<a href="http://www.featherish.com/">Weight Loss Programs</a>
-</td>
+<a href="http://www.soma-slim.com/">Diet Pills</a> |
+<a href="http://weight-loss.featherish.com/">Weight Loss Pills</a> | 
+<a href="http://www.nccw.net/">Cheap Internet Access</a> | 
+<a href="http://www.featherish.com/">Weight Loss Programs</a> |
+<a href="http://www.goongee.com/">Link Directory</a> |
+<a href="http://www.webtechin.com/nude-celebrity/">Nude Celebrity</a> |
+<p>Current Time: Tue Dec 07th, 2004 06:50 pm</p></td>
 </tr>
 
 
