--- a/r/re/rec/recipelink.com.html
+++ b/r/re/rec/recipelink.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the recipelink.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606031521id_/http%3A//www.recipelink.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the recipelink.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207235512id_/http%3A//www.recipelink.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
@@ -17,6 +17,36 @@
 <script language="JavaScript" type="text/javascript" src="/js/float.js"></script>
 <script language="javascript" type="text/javascript">
 <!--
+
+function setBM(fred) {
+
+        if (document.all && parseInt(navigator.appVersion) >= 4) {
+                var url = document.location.toString();
+                var title = document.title;
+                window.external.AddFavorite(url,title);
+                return;
+        }
+
+        if(navigator.appName == "Netscape"){
+                document.write('<font class="x-small">You must press ^D (CTRL-D) to bookmark this page</font>');
+                return;
+        }
+}
+
+function setHP(fred) {
+
+        var url = "http://www.recipelink.com";
+
+        if (document.all && document.getElementById){
+                document.body.style.behavior='url(#default#homepage)';
+                document.body.setHomePage(url);
+        }
+
+        if (document.layers && navigator.javaEnabled()) {
+                netscape.security.PrivilegeManager.enablePrivilege('UniversalPreferencesWrite');
+                navigator.preference('browser.startup.homepage', url);
+        }
+}
 
 var win=null;
 window.name="dropdown";
@@ -56,24 +86,19 @@ function jumpTo(optionObj){
 <a href="http://www.recipelink.com" target="_parent">
 <img src="/images/TRLleft.gif" align="left" valign="top" border="0"></a>
 </td>
-<td width="95%" align="left" valign="middle">
-<script type="text/javascript">
-<!--
-google_ad_client = "pub-8180458641954224";
-google_alternate_ad_url = "http://www.recipelink.com/altkitchen720x90.html";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_channel ="";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_url = "000000";
-google_color_text = "000000";
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<td width="95%" align="center" valign="middle">
+<!-- BEGIN RICH-MEDIA BURST! CODE -->
+<script language="JavaScript">
+rnum=Math.round(Math.random() * 100000);
+
+document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad11164a.cgi/v=2.0S/sz=468x60A|728x90A/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
+
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad11164a.cgi/v=2.0S/sz=468x60A|728x90A/74923/RETURN-CODE/JS/"></script>
+<noscript><a href="http://www.burstnet.com/ads/ad11164a-map.cgi/ns/v=2.0S/sz=468x60A|728x90A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad11164a.cgi/ns/v=2.0S/sz=468x60A|728x90A/" border="0" alt="Click Here"></a>
+</noscript>
+<!-- END BURST CODE -->
+
 </td>
 </tr>
 </tbody></table>
@@ -122,7 +147,6 @@ google_color_text = "000000";
 <option value="/booksale.html">Cookbooks</option>
 <option value="/copycat.html">Copycat</option>
 <option value="/rcpcp.html">Crock Pot</option>
-<option value="/misc.html">Databases</option>
 <option value="/diabetic.html">Diabetic</option>
 <option value="/rcpdiet.html">Diets</option>
 <option value="/rcpeth.html">Ethnic</option>
@@ -221,9 +245,30 @@ google_color_text = "000000";
 </tbody></table>
 </div>
 <div align="center">
-<script language="JavaScript" type="text/javascript" src="/js/homepage.js"></script>
-</div>
-<br>
+<form name="hp">
+<table border="1" cellpadding="0" cellspacing="0" bgcolor="#CC99FF">
+<tbody><tr>
+<td height="20" align="center">
+<input type="button" class="purple_button" value="Make Recipelink.com Your Home Page" onclick="setHP('a');">
+</td>
+<td height="20" align="center">
+<input type="button" class="purple_button" value="Bookmark This Page" onclick="setBM('a');">
+</td>
+</tr>
+
+</tbody></table>
+</form></div>
+<p align="center" style="margin-right: 6px; margin-bottom:12px; margin-top:0" class="x-small">
+<a target="_parent" href="http://www.recipelink.com/holiday/gingerbread.html">
+<img border="0" src="/images/gbread3.jpg" width="28" height="29" align="absmiddle"></a>
+<a target="_parent" href="http://www.recipelink.com/holiday/gingerbread.html"><b>Gingerbread House Recipes</b></a>
+<a target="_parent" href="http://www.recipelink.com/holiday/gingerbread.html">
+<img border="0" src="/images/gbread3.jpg" width="28" height="29" align="absmiddle"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+<img border="0" src="/images/m5.gif" width="34" height="40" align="absmiddle"> 
+<a href="http://www.recipelink.com/holiday/merrylinks.html" target="_parent"><b>Holiday Recipes</b></a>
+<img src="http://www.recipelink.com/images/Redball.gif" border="0" align="middle"><b>&nbsp; 
+<a target="_parent" href="http://www.recipelink.com/holiday/merrygifts.html">Jar Mixes and Food Gifts</a></b>
+<img border="0" src="/images/m5.gif" width="34" height="40" align="absmiddle"></p>
 
 <div align="left">
 <font color="#ca000d" size="4"><b>Recipelink.com Privacy Policy</b></font>
